<resources>
    <string name="app_name">PixivZH</string>
    <string name="test" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="test_all" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat. Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst. </string>
    <string name="test_one_line" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="test_numeric" translatable="false">114514 1919810</string>
    <string name="loading">Loading…</string>
    <string name="tab_item_rank_daily">Daily</string>
    <string name="tab_item_rank_weekly">Weekly</string>
    <string name="tab_item_rank_monthly">Monthly</string>
    <string name="tab_item_rank_rookie">Rookie</string>
    <string name="tab_item_rank_original">Original</string>
    <string name="tab_item_rank_male">Male</string>
    <string name="tab_item_rank_female">Female</string>
    <string name="text_view_image_detail_description">Description</string>
    <string name="text_view_image_detail_title">Title</string>
    <string name="text_view_image_detail_tags">Tags</string>
    <string name="use_cookies">Use Cookies</string>
    <string name="use_cookies_summary">Get personalized informations</string>
    <string name="use_cookies_text">Text your cookies here</string>
    <string name="personalization_setting">Personalization</string>
    <string name="auto_load_more_pics">Auto Load More Pics</string>
    <string name="customization_setting">Customization</string>
    <string name="using_saved_illust_info">Using Saved Illust Info</string>
    <string name="using_saved_illust_info_summary">Uncheck this, informations of illust will update every time you open an illust</string>
    <string name="date">Date</string>
    <string name="view_count">View Count</string>
    <string name="load_more_pics">Load More</string>
    <string name="retract_more_pics">Retract</string>
    <string name="settings">Settings</string>
    <string name="saved">Saved</string>
    <string name="configuration">Configuration</string>
    <string name="pixiv_host">Pixiv Mainpage IP</string>
    <string name="pixiv_host_summary">The IP of www.pixiv.net</string>
    <string name="pximg_host">Resource Server IP</string>
    <string name="pximg_host_summary">The IP of i.pximg.net</string>
    <string name="refresh_host">Refresh IP</string>
    <string name="refresh_host_summary">Automatically Refresh IP Address</string>
    <string name="home">Home</string>
    <string name="rank">Ranks</string>
    <string name="search">Search</string>
    <string name="follow">Follow</string>

</resources>