<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_top" />
    <PreferenceCategory android:title="@string/configuration">
        <EditTextPreference
            android:title="@string/pixiv_host"
            android:key="pixiv_host"
            android:summary="@string/pixiv_host_summary"/>
        <EditTextPreference
            android:title="@string/pximg_host"
            android:key="pximg_host"
            android:summary="@string/pximg_host_summary"/>
    </PreferenceCategory>
    <PreferenceScreen
        android:key="REFRESH_HOST"
        android:title="@string/refresh_host"
        android:summary="@string/refresh_host_summary" >
    </PreferenceScreen>
    <PreferenceCategory android:title="@string/personalization_setting">
        <CheckBoxPreference
            android:title="@string/use_cookies"
            android:key="use_cookies"
            android:summary="@string/use_cookies_summary"
            android:defaultValue="false" />
        <EditTextPreference
            android:title="Cookies"
            android:key="cookies"
            android:summary="@string/use_cookies_text"
            android:defaultValue="" />
        <!--        <SwitchPreference android:title="控制开关" />-->
        <!--        <PreferenceScreen android:title="点击操作" android:key="xxx"/>-->
        <!--        <PreferenceScreen android:title="跳转页面">-->
        <!--            <intent android:targetPackage="com.hardrelice.pixivzh" android:targetClass="com.hardrelice.pixivzh.ui.main.act.ImageDetailActivity" />-->
        <!--        </PreferenceScreen>-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/customization_setting">
        <CheckBoxPreference
            android:title="@string/auto_load_more_pics"
            android:key="auto_load_more_pics"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:title="@string/using_saved_illust_info"
            android:key="using_saved_illust_info"
            android:defaultValue="true" />
    </PreferenceCategory>

    <!--    <Preference android:title="辅助功能">-->
    <!--        <EditTextPreference android:key="number_edit"  android:title="输入电话号码"/>-->
    <!--        &lt;!&ndash;单选&ndash;&gt;-->
    <!--        <ListPreference-->
    <!--            android:key="depart_value"-->
    <!--            android:title="类别设置"-->
    <!--            android:dialogTitle="选择类别"-->
    <!--            android:entries="@array/cates"-->
    <!--            android:entryValues="@array/cates_value">-->
    <!--        </ListPreference>-->
    <!--        &lt;!&ndash;多选&ndash;&gt;-->
    <!--        <MultiSelectListPreference-->
    <!--            android:key="abc"-->
    <!--            android:entries="@array/days"-->
    <!--            android:entryValues="@array/day_value"-->
    <!--            android:title="重复"-->
    <!--            android:summary="无"-->
    <!--            />-->
    <!--    </Preference>-->
</androidx.preference.PreferenceScreen>