<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hardrelice.pixivzh.ui.main.frg.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rank"
        android:name="com.hardrelice.pixivzh.ui.main.frg.RankFragment"
        android:label="@string/rank"
        tools:layout="@layout/fragment_rank" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.hardrelice.pixivzh.ui.main.frg.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.hardrelice.pixivzh.ui.main.frg.SavedFragment"
        android:label="@string/settings" />
</navigation>