<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linear_layout_image_detail"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/load_more_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retract_more_pics"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/lower_round_both"
                android:visibility="gone"/>

<!--            <ProgressBar-->
<!--                android:id="@+id/progress_bar_image_detail"-->
<!--                style="?android:attr/progressBarStyleHorizontal"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:visibility="visible"-->
<!--                />-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/text_view_image_detail_view_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_count"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/text_view_image_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/pixiv_blue_variant_light"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/image_button_image_detail_user_profile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:padding="0dp"
                    android:src="@color/pixiv_blue" />

                <TextView
                    android:id="@+id/text_view_image_detail_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="User Name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PID"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/text_view_image_detail_pid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="10dp"
                    android:breakStrategy="high_quality"
                    android:textIsSelectable="true"
                    android:text="@string/test_numeric"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="UID"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/text_view_image_detail_uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="10dp"
                    android:breakStrategy="high_quality"
                    android:textIsSelectable="true"
                    android:text="@string/test_numeric"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_image_detail_title"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/text_view_image_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="10dp"
                    android:breakStrategy="high_quality"
                    android:textIsSelectable="true"
                    android:text="@string/test_one_line"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_image_detail_tags"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/text_view_image_detail_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="10dp"
                    android:breakStrategy="high_quality"
                    android:textIsSelectable="true"
                    android:text="@string/test_one_line"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_image_detail_description"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <WebView
                    android:id="@+id/web_view_image_detail_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginVertical="10dp"
                    tools:ignore="WebViewLayout" />
            </LinearLayout>

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>