<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/rank_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rank_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eee"
            tools:listitem="@layout/card_top" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <View
        android:id="@+id/status_bar_blank_space"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/pixiv_blue"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tab_rank_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/pixiv_blue"
        app:layout_constraintBottom_toTopOf="@+id/rank_swipe_refresh_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_bar_blank_space">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_rank_type"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabBackground="@color/pixiv_blue"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem

                android:id="@+id/tab_item_rank_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_rank_daily" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_rank_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_rank_weekly" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_rank_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_rank_monthly" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar_rank_loadmore"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:indeterminateTint="@color/pixiv_blue_variant_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rank_swipe_refresh_layout"
        app:layout_constraintStart_toEndOf="@+id/rank_swipe_refresh_layout" />

    <ProgressBar
        android:id="@+id/progress_bar_rank_refresh"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/pixiv_blue_variant_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rank_swipe_refresh_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>